// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders signOutcome component on successful sign 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignOutcome
    goToAuthorization={[Function]}
    petition={Object {}}
    petitionError=""
    petitionLink="http://something.com"
    signSuccess={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Image
          source={1}
          style={
            Object {
              "alignSelf": "center",
              "height": 75,
              "marginBottom": 40,
              "width": 75,
            }
          }
        />,
        <Button
          enabled={true}
          name="Back to home2"
          onPress={[Function]}
          style={Object {}}
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "rgb(246, 246, 246)",
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "source": 1,
          "style": Object {
            "alignSelf": "center",
            "height": 75,
            "marginBottom": 40,
            "width": 75,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "enabled": true,
          "name": "Back to home2",
          "onPress": [Function],
          "style": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Image
            source={1}
            style={
              Object {
                "alignSelf": "center",
                "height": 75,
                "marginBottom": 40,
                "width": 75,
              }
            }
          />,
          <Button
            enabled={true}
            name="Back to home2"
            onPress={[Function]}
            style={Object {}}
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "rgb(246, 246, 246)",
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
            "style": Object {
              "alignSelf": "center",
              "height": 75,
              "marginBottom": 40,
              "width": 75,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "enabled": true,
            "name": "Back to home2",
            "onPress": [Function],
            "style": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
}
`;

exports[`renders signOutcome component on unsuccessful sign 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignOutcome
    goToAuthorization={[Function]}
    petition={Object {}}
    petitionError=""
    petitionLink="http://something.com"
    signSuccess={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#FFF",
            "margin": 16,
            "marginTop": 30,
            "paddingHorizontal": 20,
            "paddingVertical": 40,
          }
        }
      >
        <Image
          source={1}
          style={
            Object {
              "alignSelf": "center",
              "height": 75,
              "marginBottom": 40,
              "width": 75,
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "center",
              "width": 250,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontSize": 14,
                "marginBottom": 4,
                "textAlign": "center",
              }
            }
          >
            Sign failed for
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginVertical": 15,
                "textAlign": "center",
              }
            }
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "marginBottom": 20,
                "textAlign": "center",
              }
            }
          >
            Reason:  

You can return to view other petitions on the Secure Petitions website
          </Text>
          <Button
            enabled={true}
            name="Back to home"
            onPress={[Function]}
            style={Object {}}
          />
        </View>
      </View>,
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "rgb(246, 246, 246)",
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Image
            source={1}
            style={
              Object {
                "alignSelf": "center",
                "height": 75,
                "marginBottom": 40,
                "width": 75,
              }
            }
          />,
          <View
            style={
              Object {
                "alignSelf": "center",
                "width": 250,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 14,
                  "marginBottom": 4,
                  "textAlign": "center",
                }
              }
            >
              Sign failed for
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginVertical": 15,
                  "textAlign": "center",
                }
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "marginBottom": 20,
                  "textAlign": "center",
                }
              }
            >
              Reason:  

You can return to view other petitions on the Secure Petitions website
            </Text>
            <Button
              enabled={true}
              name="Back to home"
              onPress={[Function]}
              style={Object {}}
            />
          </View>,
        ],
        "style": Object {
          "alignSelf": "stretch",
          "backgroundColor": "#FFF",
          "margin": 16,
          "marginTop": 30,
          "paddingHorizontal": 20,
          "paddingVertical": 40,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
            "style": Object {
              "alignSelf": "center",
              "height": 75,
              "marginBottom": 40,
              "width": 75,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 14,
                    "marginBottom": 4,
                    "textAlign": "center",
                  }
                }
              >
                Sign failed for
              </Text>,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginVertical": 15,
                    "textAlign": "center",
                  }
                }
              />,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "marginBottom": 20,
                    "textAlign": "center",
                  }
                }
              >
                Reason:  

You can return to view other petitions on the Secure Petitions website
              </Text>,
              <Button
                enabled={true}
                name="Back to home"
                onPress={[Function]}
                style={Object {}}
              />,
            ],
            "style": Object {
              "alignSelf": "center",
              "width": 250,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "Sign failed for",
                "ellipsizeMode": "tail",
                "style": Object {
                  "fontSize": 14,
                  "marginBottom": 4,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "Sign failed for",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": undefined,
                "ellipsizeMode": "tail",
                "style": Object {
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginVertical": 15,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "Reason:  

You can return to view other petitions on the Secure Petitions website",
                "ellipsizeMode": "tail",
                "style": Object {
                  "marginBottom": 20,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "Reason:  

You can return to view other petitions on the Secure Petitions website",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "enabled": true,
                "name": "Back to home",
                "onPress": [Function],
                "style": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#FFF",
              "margin": 16,
              "marginTop": 30,
              "paddingHorizontal": 20,
              "paddingVertical": 40,
            }
          }
        >
          <Image
            source={1}
            style={
              Object {
                "alignSelf": "center",
                "height": 75,
                "marginBottom": 40,
                "width": 75,
              }
            }
          />
          <View
            style={
              Object {
                "alignSelf": "center",
                "width": 250,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 14,
                  "marginBottom": 4,
                  "textAlign": "center",
                }
              }
            >
              Sign failed for
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginVertical": 15,
                  "textAlign": "center",
                }
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "marginBottom": 20,
                  "textAlign": "center",
                }
              }
            >
              Reason:  

You can return to view other petitions on the Secure Petitions website
            </Text>
            <Button
              enabled={true}
              name="Back to home"
              onPress={[Function]}
              style={Object {}}
            />
          </View>
        </View>,
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "rgb(246, 246, 246)",
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Image
              source={1}
              style={
                Object {
                  "alignSelf": "center",
                  "height": 75,
                  "marginBottom": 40,
                  "width": 75,
                }
              }
            />,
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "width": 250,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 14,
                    "marginBottom": 4,
                    "textAlign": "center",
                  }
                }
              >
                Sign failed for
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginVertical": 15,
                    "textAlign": "center",
                  }
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "marginBottom": 20,
                    "textAlign": "center",
                  }
                }
              >
                Reason:  

You can return to view other petitions on the Secure Petitions website
              </Text>
              <Button
                enabled={true}
                name="Back to home"
                onPress={[Function]}
                style={Object {}}
              />
            </View>,
          ],
          "style": Object {
            "alignSelf": "stretch",
            "backgroundColor": "#FFF",
            "margin": 16,
            "marginTop": 30,
            "paddingHorizontal": 20,
            "paddingVertical": 40,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": 1,
              "style": Object {
                "alignSelf": "center",
                "height": 75,
                "marginBottom": 40,
                "width": 75,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontSize": 14,
                      "marginBottom": 4,
                      "textAlign": "center",
                    }
                  }
                >
                  Sign failed for
                </Text>,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontSize": 20,
                      "fontWeight": "500",
                      "marginVertical": 15,
                      "textAlign": "center",
                    }
                  }
                />,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "marginBottom": 20,
                      "textAlign": "center",
                    }
                  }
                >
                  Reason:  

You can return to view other petitions on the Secure Petitions website
                </Text>,
                <Button
                  enabled={true}
                  name="Back to home"
                  onPress={[Function]}
                  style={Object {}}
                />,
              ],
              "style": Object {
                "alignSelf": "center",
                "width": 250,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "Sign failed for",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "fontSize": 14,
                    "marginBottom": 4,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "Sign failed for",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": undefined,
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginVertical": 15,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "Reason:  

You can return to view other petitions on the Secure Petitions website",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "marginBottom": 20,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "Reason:  

You can return to view other petitions on the Secure Petitions website",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "enabled": true,
                  "name": "Back to home",
                  "onPress": [Function],
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
}
`;
